--- a/app/partials/calcSaleryView.html
+++ b/app/partials/calcSaleryView.html
@@ -2,3 +2,28 @@
 
 <p>Nedan kan du fylla i det fällt som är viktigast för dig.</p>
 
+<div class="form-group">
+    <label for="identity">Eget utag: </label>
+    <input ng-model="ownWithdrawl" type="number" class="form-control" placeholder="Ange önskat eget utag i hela kronor">
+</div>
+
+<div class="form-group">
+    <label for="age">Bruttolön: </label>
+    <input ng-model="saleryWithTax" type="number" class="form-control" placeholder="Ange önskad bruttolön i hela kronor">
+    <button ng-click="counteFromSaleryWithTax()" type="button" class="btn btn-default">Beräkna</button>
+</div>
+
+<div class="form-group">
+    <label for="age">Skatteavdrag:</label>
+    <input ng-model="tax" type="number" class="form-control" placeholder="Ange önskad skattekostnad i hela kronor">
+</div>
+
+<div class="form-group">
+    <label for="age">Egenavgift:</label>
+    <input ng-model="employmentFee" type="number" class="form-control" placeholder="Ange önskad egenavgift i hela kronor">
+</div>
+
+<div class="form-group">
+    <label for="age">Nettolön:</label>
+    <input ng-model="saleryWithOutTax" type="number" class="form-control" placeholder="Ange önskad egenavgift i hela kronor">
+</div>
