updated the design and fixed amissing field in the salery

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -15,28 +15,33 @@ form-control*/
 
 
 .content-wrapper {
-    background-color: @blue;
-    padding: 40px;
-    margin-top: 40px;
-    border-radius: 20px;
+   //background-color: @blue;
+    //padding: 40px;
+   //margin-top: 40px;
+    //border-radius: 20px;
+    width: 100%;    
 }
 
-.field-wrapper {
-    padding-top: 20px;
-}
+//.form-group {
+//    width:100%;
+//}
+//
+//.field-wrapper {
+//    padding-top: 20px;
+//}
 
-@media all and (min-width: 766px){
-            .form-control {
-                width: 600px !important;
-                }
-            }
-            @media all and (max-width: 765px) and (min-width: 496px){
-            .form-control {
-                width: 359px !important;
-                }
-            }
-            @media all and (max-width: 495px){
-            .form-control {
-                width:100% !important;
-                }
-            }
+//@media all and (min-width: 766px){
+//            .form-control {
+//                width: 600px !important;
+//                }
+//            }
+//            @media all and (max-width: 765px) and (min-width: 496px){
+//            .form-control {
+//                width: 359px !important;
+//                }
+//            }
+//            @media all and (max-width: 495px){
+//            .form-control {
+//                width:100% !important;
+//                }
+//            }
