--- a/app/css/app.css
+++ b/app/css/app.css
@@ -6,26 +6,5 @@ form-inline
 form-group
 form-control*/
 .content-wrapper {
-  background-color: #408dd2;
-  padding: 40px;
-  margin-top: 40px;
-  border-radius: 20px;
-}
-.field-wrapper {
-  padding-top: 20px;
-}
-@media all and (min-width: 766px) {
-  .form-control {
-    width: 600px !important;
-  }
-}
-@media all and (max-width: 765px) and (min-width: 496px) {
-  .form-control {
-    width: 359px !important;
-  }
-}
-@media all and (max-width: 495px) {
-  .form-control {
-    width: 100% !important;
-  }
+  width: 100%;
 }
