--- a/app/css/app.less
+++ b/app/css/app.less
@@ -13,14 +13,17 @@ form-control*/
 @blue: #408dd2;
 
 
+.margin-top-container {
+  padding-top: 50px;
+}
 
-.content-wrapper {
+//.content-wrapper {
    //background-color: @blue;
     //padding: 40px;
    //margin-top: 40px;
     //border-radius: 20px;
-    width: 100%;    
-}
+//    width: 100%;    
+//}
 
 //.form-group {
 //    width:100%;
