--- a/app/partials/calcSaleryView.html
+++ b/app/partials/calcSaleryView.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
 
     <div class="info-text-calculate">
         <h1> Hur mycket lön vill du ha?</h1>
@@ -11,7 +11,7 @@
         <div class="form-group form-group-lg">
         <label for="ownWithdrawl">Eget utag: </label>
             <div class="input-group col-xs-12">
-                <input ng-model="ownWithdrawl" type="number" class="form-control" placeholder="Ange önskat eget utag i hela kronor">
+                <input ng-model="ownWithdrawl" type="number" class="form-control" placeholder="Eget utag i hela kronor">
                 <span class="input-group-btn">
                     <button ng-click="counteOwnWithdrawl()" type="button" class="btn btn-default">Beräkna</button>
                 </span>
@@ -21,7 +21,7 @@
         <div class="form-group form-group-lg">
             <label for="saleryWithTax">Bruttolön: </label>
             <div class="input-group col-xs-12">
-                <input ng-model="saleryWithTax" type="number" class="form-control" placeholder="Ange önskad bruttolön i hela kronor">
+                <input ng-model="saleryWithTax" type="number" class="form-control" placeholder="Bruttolön i hela kronor">
                 <span class="input-group-btn">
                     <button ng-click="counteSaleryWithTax()" type="button" class="btn btn-default">Beräkna</button>    
                 </span>
@@ -31,7 +31,7 @@
         <div class="form-group form-group-lg">
         <label for="tax">Skatteavdrag:</label>
            <div class="input-group col-xs-12">
-                <input ng-model="tax" type="number" class="form-control" placeholder="Ange önskad skattekostnad i hela kronor">
+                <input ng-model="tax" type="number" class="form-control" placeholder="Skattekostnad i hela kronor">
                 <span class="input-group-btn">
                     <button ng-click="counteTax()" type="button" class="btn btn-default">Beräkna</button>
                 </span>
@@ -42,7 +42,7 @@
         <div class="form-group form-group-lg">
         <label for="emplpymentFee">Egenavgift:</label>
            <div class="input-group col-xs-12">
-                <input ng-model="employmentFee" type="number" class="form-control col-xs-9" placeholder="Ange önskad egenavgift i hela kronor">
+                <input ng-model="employmentFee" type="number" class="form-control col-xs-9" placeholder="Egenavgift i hela kronor">
                 <span class="input-group-btn">
                     <button ng-click="counteEmoloymentFee()" type="button" class="btn btn-default">Beräkna</button>
                 </span>
@@ -52,7 +52,7 @@
         <div class="form-group form-group-lg">
         <label for="saleryWithOutTax">Nettolön:</label>
            <div class="input-group col-xs-12">
-                <input ng-model="saleryWithOutTax" type="number" class="form-control" placeholder="Ange önskad egenavgift i hela kronor">
+                <input ng-model="saleryWithOutTax" type="number" class="form-control" placeholder="Lön efter skatt i hela kronor">
                 <span class="input-group-btn">
                     <button ng-click="countSaleryWithOutTax()" type="button" class="btn btn-default">Beräkna</button>
                 </span>
@@ -62,9 +62,8 @@
         <div class="form-group form-group-lg">
         <label for="totalTax">Totalt till skatteverket:</label>
             <div class="input-group col-xs-12">
-                <input ng-model="totalTax" type="number" class="form-control" placeholder="Här visas den totala summan som ska skickas till skatteverket">
+                <input ng-model="totalTax" type="number" class="form-control" placeholder="Total summan till skatteverket">
             </div>
         </div>
-    </div>
     </form>
 </div>    
