--- a/app/partials/calcSaleryView.html
+++ b/app/partials/calcSaleryView.html
@@ -11,7 +11,7 @@
         <div class="form-group form-group-lg">
         <label for="ownWithdrawl">Eget utag: </label>
             <div class="input-group col-xs-12">
-                <input ng-model="ownWithdrawl" type="number" class="form-control" placeholder="Eget utag i hela kronor">
+                <input ng-model="ownWithdrawl" type="number" min="0" class="form-control" placeholder="Eget utag i hela kronor">
                 <span class="input-group-btn">
                     <button ng-click="counteOwnWithdrawl()" type="button" class="btn btn-default">Beräkna</button>
                 </span>
@@ -21,7 +21,7 @@
         <div class="form-group form-group-lg">
             <label for="saleryWithTax">Bruttolön: </label>
             <div class="input-group col-xs-12">
-                <input ng-model="saleryWithTax" type="number" class="form-control" placeholder="Bruttolön i hela kronor">
+                <input ng-model="saleryWithTax" type="number" min="0" class="form-control" placeholder="Bruttolön i hela kronor">
                 <span class="input-group-btn">
                     <button ng-click="counteSaleryWithTax()" type="button" class="btn btn-default">Beräkna</button>    
                 </span>
@@ -31,7 +31,7 @@
         <div class="form-group form-group-lg">
         <label for="tax">Skatteavdrag:</label>
            <div class="input-group col-xs-12">
-                <input ng-model="tax" type="number" class="form-control" placeholder="Skattekostnad i hela kronor">
+                <input ng-model="tax" type="number" min="0" class="form-control" placeholder="Skattekostnad i hela kronor">
                 <span class="input-group-btn">
                     <button ng-click="counteTax()" type="button" class="btn btn-default">Beräkna</button>
                 </span>
@@ -42,7 +42,7 @@
         <div class="form-group form-group-lg">
         <label for="emplpymentFee">Egenavgift:</label>
            <div class="input-group col-xs-12">
-                <input ng-model="employmentFee" type="number" class="form-control col-xs-9" placeholder="Egenavgift i hela kronor">
+                <input ng-model="employmentFee" type="number" min="0" class="form-control col-xs-9" placeholder="Egenavgift i hela kronor">
                 <span class="input-group-btn">
                     <button ng-click="counteEmoloymentFee()" type="button" class="btn btn-default">Beräkna</button>
                 </span>
@@ -52,7 +52,7 @@
         <div class="form-group form-group-lg">
         <label for="saleryWithOutTax">Nettolön:</label>
            <div class="input-group col-xs-12">
-                <input ng-model="saleryWithOutTax" type="number" class="form-control" placeholder="Lön efter skatt i hela kronor">
+                <input ng-model="saleryWithOutTax" type="number" min="0" class="form-control" placeholder="Lön efter skatt i hela kronor">
                 <span class="input-group-btn">
                     <button ng-click="countSaleryWithOutTax()" type="button" class="btn btn-default">Beräkna</button>
                 </span>
