working on apartement calculation

--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -16,6 +16,7 @@
             <ul class="nav navbar-nav">
                 <!--<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
                 <li ng-class="{ active: isActive('/salery')}"><a href="#/salery">Salery</a></li>
+                <li ng-class="{ active: isActive('/apartement')}"><a href="#/apartement">Apartement</a></li>
                 <li ng-class="{ active: isActive('/login')}"><a href="#/login">Login</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
